--- a/src/config.json
+++ b/src/config.json
@@ -14,6 +14,9 @@
   "PLACE_DENSITY": 0.8,
   "TNS_END_PERCENT": 100,
 
+  "//": "Allow enough space to fit the ROM:",
+  "SYNTH_MEMORY_MAX_BITS": 16384,
+
   "//": "Configuration docs: https://openroad-flow-scripts.readthedocs.io/en/latest/user/FlowVariables.html",
 
   "//": "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!",
